--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "doodoo.js",
   "dependencies": {
     "cli-table": "^0.3.1",
+    "colors": "^1.3.3",
+    "format-number": "^3.0.0",
     "inquirer": "^6.2.1",
     "mysql": "^2.16.0",
     "table": "^5.2.2"
